--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,7 @@ events {
 http {
     server {
         listen       80;
-        server_name  30.30.20.20; # <-- укажите ip адрес вашего сервера
+        server_name  15.237.40.51/; # <-- укажите ip адрес вашего сервера
 
         location / {
             proxy_pass http://yout:3000/;
