--- a/nginx.conf
+++ b/nginx.conf
@@ -8,14 +8,51 @@ events {
 http {
     server {
         listen       80;
-        server_name  15.237.40.51/; # <-- укажите ip адрес вашего сервера
+        server_name  localhost; # <-- укажите ip адрес вашего сервера
+        client_max_body_size 128M;
 
         location / {
             proxy_pass http://yout:3000/;
         }
 
+        location /realms {
+            proxy_pass http://keycloak:8088/realms;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /admin/realms {
+            proxy_pass http://keycloak:8088/admin/realms;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /resources {
+            proxy_pass http://keycloak:8088/resources;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /robots.txt {
+            proxy_pass http://keycloak:8088/robots.txt;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         location /api/ {
-            proxy_pass http://video-api:8080/;
+            proxy_pass http://video-api:8080/api/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
